--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -21,7 +21,8 @@
             android:gravity="top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"/>
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="50dp"/>
 
         <com.stfalcon.chatkit.messages.MessageInput
             android:id="@+id/input"
